2023-10-10 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPrivate.h: New method to set up system error information.
	* Source/Additions/NSError+GNUstepBase.m: Implement method.
	* Source/NSTask.m(launchAndReturnError:): Return an error if the
	path to launch in does not exist, is not a directory or is not
	accessible.

2023-10-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTask.m(launchAndReturnError:): Use _exit instead of
	exit to terminate the vfork'ed process. This avoids running the
	atexit handlers, which could have visible side effects in the
	parent process.

2023-10-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPredicate.m: fixup for array access keywords
	* Tests/base/NSPredicate/basic.m: add simple testcases for array

2023-10-07 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSKeyValueObserving.h
	* Source/NSKeyValueObserving.m: Add nethods
	removeObserver:forKeyPath:context: and
	removeObserver:forObjectsAtIndexes:forKeyPath:context:
	* Tests/base/KVC/mutable.m: Add tests for the above
	methods.

2023-08-18 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSCache.h: Add _lock ivar
	* Source/NSCache.m: Protect cache operations with a lock for
	thread safety.
	
2023-08-10 Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSNumberFormatter.h:
	* Source/NSNumberFormatter.m:
	Change NSNumberFormatter minimum/maximum properties from
	NSDecimalNumber to NSNumber to match Apple platforms.

2023-07-30  Yavor Doganov  <yavor@gnu.org>

	* Tools/HTMLLinker.1: Fix a groff warning.

2023-07-30  Yavor Doganov  <yavor@gnu.org>

       * Tools/gdnc.m ([GDNCServer init]):
       * Tools/gspath.1: Fix spelling errors.

2023-07-26 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSData.m:
	Fix NSData initWithContentsOfURL: caching data of file URLs.

2023-07-26 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSURL.m:
	* Tests/base/NSURL/basic.m: